--- a/config/database.yml
+++ b/config/database.yml
@@ -58,6 +58,7 @@ development:
 test:
   <<: *default
   database: blog_app_test
+  database: DeviseMailer_test
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -82,5 +83,6 @@ test:
 production:
   <<: *default
   database: blog_app_production
+  database: DeviseMailer_prod
   username: blog_app
   password: <%= ENV["BLOG_APP_DATABASE_PASSWORD"] %>
