--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -7,7 +7,7 @@ AllCops:
     - "Guardfile"
     - "Rakefile"
     - "node_modules/**/*"
-
+    - "test/channels/application_cable/connection_test.rb"
   DisplayCopNames: true
 
 Layout/LineLength:
